--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -54,7 +54,7 @@
             </com.google.android.material.card.MaterialCardView>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:background="@drawable/rounded_shape"
                 android:backgroundTint="@color/background"
@@ -63,15 +63,17 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/materialCardView"
-                app:layout_constraintVertical_bias="0.0">
+                app:layout_constraintVertical_bias="1.0">
 
                 <TextView
                     android:id="@+id/tv_detail_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:layout_marginEnd="30dp"
+                    android:layout_marginStart="30dp"
                     android:text="TextView"
-                    android:textSize="20dp"
+                    android:textSize="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -81,7 +83,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginRight="30dp"
                     android:text="TextView"
                     android:textSize="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +93,7 @@
                     android:id="@+id/tv_detail_description"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="30dp"
                     android:layout_marginTop="15dp"
                     android:text="DESCRIPTION"
                     android:textColor="@color/black"
@@ -104,8 +106,9 @@
                     android:id="@+id/tv_detail_desc"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="30dp"
                     android:layout_marginTop="12dp"
+                    android:layout_marginEnd="30dp"
                     android:text="TextView"
                     android:textSize="14dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -127,7 +130,7 @@
                     android:id="@+id/tv_detail_category"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="30dp"
                     android:layout_marginTop="15dp"
                     android:text="Category :"
                     android:textSize="16dp"
@@ -149,7 +152,7 @@
                     style="?android:attr/ratingBarStyleSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="30dp"
                     android:layout_marginTop="8dp"
                     android:numStars="5"
                     android:theme="@style/customRatingBar"
