--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -36,6 +36,6 @@
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@+id/mCardView"
-        tools:listitem="@layout/item_products"/>
+        tools:listitem="@layout/item_favorite"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
