--- a/app/src/main/res/layout/fragment_success.xml
+++ b/app/src/main/res/layout/fragment_success.xml
@@ -10,14 +10,16 @@
         android:id="@+id/txMessage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:fontFamily="@font/calistoga"
         android:gravity="center"
-        android:text="Thank you, we have received your order!"
+        android:text="Thank you, we have \n received your order!"
         android:textColor="@color/black"
-        android:textSize="22sp"
-        android:layout_marginTop="50dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/payment_success"
